# drones

./: .gitignore  README.md  benchmark_tensorrt.py  cpp_reqs.txt  cpp_reqs_notorch.txt  export_to_tensorrt.py
.dvc/: config
aux_codes/: README.md
configs/: data_pixel_tensor.py
deployment/: generate_redoc.py  networking_utils.py  readme.md
models/: car_classification.pt.dvc  obst-yolov8m-seg.pt.dvc
src/cpp/: CMakeLists.txt  csrt_tracker_ext.cpp
src/cpp/build_gpu/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  csrt_tracker_ext.sln  csrt_tracker_ext.vcxproj  csrt_tracker_ext.vcxproj.filters
src/cpp/build_gpu/Release/: csrt_tracker_ext.cp312-win_amd64.pyd  csrt_tracker_ext.exp  csrt_tracker_ext.lib
src/cpp/build_gpu/csrt_tracker_ext.dir/Release/: csrt_tracker_ext.cp312-win_amd64.iobj  csrt_tracker_ext.cp312-win_amd64.pyd.recipe
src/cpp/build_gpu/csrt_tracker_ext.dir/Release/csrt_tracker_ext.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/cpp/build_gpu/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
src/cpp/build_gpu/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/cpp/build_gpu/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
src/cpp/build_gpu/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
(+1429 files in other folders)
